logo not aligned issue solved

--- a/css/common.css
+++ b/css/common.css
@@ -45,7 +45,7 @@
 
 }
 .menus{display: none;color: #fff;font-size: 35px;}
-.mobile-menu{list-style-type: none;}
+.mobile-menu{list-style-type: none;padding-left: 0px;}
 #forActive-mobile #forActiveul{display: none;}
 @media (max-width:1280px) {
     #forActive-mobile #forActiveul{display: none;}
